Fix the spacing below cards when they stack, and fix size of color keys.

--- a/app/assets/stylesheets/stylesheet.css
+++ b/app/assets/stylesheets/stylesheet.css
@@ -106,6 +106,7 @@ p, div {
 .card {
   padding-left: 0px;
   padding-right: 0px;
+  margin-bottom: 20px;
 }
 
 .btn-link-override {
@@ -157,7 +158,7 @@ div .card-header-edit {
 /* Project Key ---------------------------------------------------------------*/
 
 .project-key span{
-  border-left: 25px solid black;
+  border-left: 21px solid black;
   margin-left: 10px;
   margin-right: 20px;
   padding-left: 10px;
@@ -187,7 +188,7 @@ div .card-header-edit {
 /* Task Key ---------------------------------------------------------------*/
 
 .task-key span{
-  border-left: 25px solid black;
+  border-left: 21px solid black;
   margin-left: 10px;
   margin-right: 20px;
   padding-left: 10px;
